index.css
.timer-wrapper {
    display: flex; /* or inline-flex */
    flex-direction: column;
    justify-content: center;
    width: 100%;
    position: absolute;
    height: 100%;
}

#timer {
    text-align: center;
    color: white;
    font-size: 12em;
    text-shadow: 0.03em 0.03em #000000;
}

@media only screen and (max-width: 990px) {
    #timer {
        font-size: 23vh;
        text-shadow: 0.5vh 0.5vh #000000;
    }
}


html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: 'Indie Flower', cursive;
}

body {
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
    background-position: center;
}

body.dog {
    background-image: url('img/dog.svg');
}

body.cat {
    background-image: url('img/cat.svg');
}

.image-background {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-position: center;
    height: 100%;
    width: 100%;
}

body.not-started .form-container{
    display: flex; /* or inline-flex */
}

.form-container {
    display: none;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    position: absolute;
    text-align: center;
    width: 100%;
    align-items: center;
}

.form-container label{
    color: white;
    font-size: 2em;
    max-height: 500px;
}

.form-container input{
    max-width: 100%;
    width: 400px;
    height: calc(2.25rem + 2px);
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    text-align: center;
    padding-left: 25px;
}

.form-container input.has-error{
    border-color: #dc3545;
}

.form-container button{
    margin-top: 10px;
    color: #fff;
    background-color: #28a745;
    border-color: #28a745;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s;
}

.hide{
    display: none!important;
}

#image-wrapper {
    background-size: cover;
    box-shadow:         inset 0 0 10px white;

    /* Add the blur effect */
    filter: blur(8px);
    -webkit-filter: blur(8px);
}

#image {
    background-repeat: no-repeat;
    background-size: contain;
}

.btn {
    height: 5vw;
    width: 5vw;
    border: 0px;
    position: absolute;
    bottom: 0px;
    right: 0px;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
    margin: 10px;
    z-index: 100;
}

.btn-cat, .btn-dog{
    display: none;
}

body.dog .btn-cat{
    display: inline;
}

body.cat .btn-dog{
    display: inline;
}

.not-started .btn{
    display: none
}

.btn.btn-dog {
    background-image: url('img/dog.svg');
}

.btn.btn-cat {
    background-image: url('img/cat.svg');
}

.btn.btn-play {
    background-image: url('img/play.svg');
    right: 6vw;
    background-color: white;
    border-radius: 50%;
}

.btn.btn-pause {
    background-image: url('img/pause.svg');
    right: 6vw;
    background-color: white;
    border-radius: 50%;
}

.btn.btn-copy {
    background-color: black;
    border-radius: 50%;
    color: white;
    font-size: 27px;
}

.btn.btn-copy {
    right: 12vw;
}

@media only screen and (max-width: 990px) {
    .btn {
        height: 10vw;
        width: 10vw;
    }

    .btn.btn-play, .btn.btn-pause {
        right: 12vw;
    }
}

div#preload { 
    display: none; 
}

.btn {
    -webkit-filter: drop-shadow( 0px 0px 3px white);
    filter: drop-shadow( 0px 0px 3px white);
    outline: 0;
}

a.contact-link {
    bottom: 10px;
    color: black;
    left: 10px;
    outline: none;
    position: absolute;
    text-decoration:none;
    text-shadow: 1px 1px white;
}

#apiUrl {
    position: absolute;
    top: 50%;
    left: 40%;
    width: 10px;
}

